--- a/home.html
+++ b/home.html
@@ -22,13 +22,17 @@
             <input type="radio" name="radio-btn" id="radio2">
             <input type="radio" name="radio-btn" id="radio3">
             <input type="radio" name="radio-btn" id="radio4">
+            <input type="radio" name="radio-btn" id="radio5">
+            <input type="radio" name="radio-btn" id="radio6">
+           
 
             <div class="slides" id="slides">
                 <img src="./image/Parque.jpg">
                 <img src="./image/Princesa.jpg">
-                <img src="./image/Shopping.jpg">
                 <img src="./image/Natal.jpg">
-                
+                 <img src="./image/Barba.jpg">
+                <img src="./image/Carnaval.jpg">
+                <img src="./image/Trocados.jpg">                             
             </div>
 
             <div class="navigation-manual">
@@ -36,6 +40,8 @@
                 <label for="radio2" class="manual-btn"></label>
                 <label for="radio3" class="manual-btn"></label>
                 <label for="radio4" class="manual-btn"></label>
+                <label for="radio5" class="manual-btn"></label>
+                <label for="radio6" class="manual-btn"></label>                
             </div>
         </div>
         <div  class="texto">
@@ -65,7 +71,7 @@
             });
         });
 
-        setInterval(showSlide, 5000);
+        setInterval(showSlide, 10000);
 
         let startX = 0;
         let isDragging = false;
@@ -109,4 +115,5 @@
     </script>
 </body>
 </html>
+
 
