--- a/home.html
+++ b/home.html
@@ -46,9 +46,12 @@
         </div>
         <div  class="texto">
         <section>
-            <p> Desde aquele nosso primeiro beijo no parque, cada momento com você se tornou inesquecível. Lembro de todos os nossos encontros, desde os cinemas que fazemos todo mês, até os 12 cards que criamos juntos, cada um com um date especial que tiramos durante o ano, passando pelos passeios, jantares, cozinhando às cegas em um dia e inventando comidas para um filme em outro, e até os dias de tempo atoa que passamos só curtindo nossa companhia. Cada presente seu, seja uma cartinha, uma roupa, um perfume, sempre me mostrou o quanto você se importa e me faz sentir especial. E como adoro os presentes feitos à mão por você, quis usar o que aprendi na minha faculdade para criar este site como um gesto de retribuir, um pedacinho do meu esforço e carinho para você. Obrigado por cada abraço, cada risada e cada instante ao seu lado. Mal posso esperar por todos os dias que ainda vamos viver juntos, criando novas memórias e rindo das pequenas coisas.</p>
-            <p>Sei que não gosto muito de postar nossas coisas no Instagram, então resolvi encontrar uma forma de continuar sendo low profile e ainda te fazer uma declaração especial. Espero que tenha gostado kkk</p>
-            </section>
+            <p>Feliz aniversário de 1 ano, meu amor. Obrigado por estar ao meu lado em cada momento e por fazer parte da minha vida de um jeito tão único e especial.</p>
+            <p>Eu percebi que era você desde aquele nosso primeiro beijo no parque, e desde então cada dia, cada instante ao seu lado só confirmou isso. Lembro de todos os nossos encontros: os cinemas de todo mês, os cards que criamos juntos, os passeios, os jantares, a vez que cozinhamos às cegas, a comida inventada para acompanhar um filme e até os momentos de tempo atoa, quando simplesmente estar com você já era o bastante.</p>
+            <p>Cada presente que você me deu, seja uma cartinha, uma roupa ou um perfume, me lembra momentos especiais e me faz sentir o quanto você se importa. Eu adorei cada um deles, e, como adoro tudo que você faz à mão, quis retribuir de uma forma minha: usando o que aprendi na faculdade para criar este site, um pedacinho do meu carinho e esforço só para você.</p>
+            <p>Obrigado por cada abraço, cada risada e cada instante ao seu lado. Mal posso esperar por tudo o que ainda vamos viver, colecionando novas memórias e rindo das pequenas coisas que fazem a nossa história ser única.</p>
+            <p>Obrigado por ser você e por me fazer tão feliz. Eu te amo.</p>
+        </section>
     </div>
 
     </main>
@@ -115,5 +118,6 @@
     </script>
 </body>
 </html>
+
 
 
